# convrs

./: .gitignore  Cargo.toml  LICENSE  README.md
converb/: .gitignore  Cargo.toml  README.md  bundler.toml  log.md
converb/src/: editor.rs  lib.rs  main.rs  short_2.rs  upconv.rs
examples/converb/: Cargo.toml
examples/converb/src/: lib.rs
perf/: Cargo.toml
perf/src/: main.rs
src/: conv.rs  envelopes.rs  fdl.rs  helpers.rs  lib.rs  moving_conv.rs  non_thread.rs  partition.rs  partition_table.rs  scheduler.rs  straight_fft_conv.rs  test.rs  upconv.rs
test_sounds/scratch/: 1.wav.asd  10.wav.asd  11.wav.asd  12.wav.asd  2.wav.asd  3.wav.asd  4.wav.asd  5.wav.asd  6.wav.asd  7.wav.asd  8.wav.asd
tests/: correctness.rs
tests/test_sounds/IRs/: short2.wav.asd
tests/test_sounds/in/: c3sine.wav.asd  c3square.wav.asd  piano.wav.asd
