[package]
name = "converb"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Thomas <andrew.r.j.thomas@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://andrewrthomas.com"
description = "a simple convolution reverb"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
hound = "3.5.1"
realfft = "3.3.0"
num = "0.4.1"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
