[package]
name = "converb"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Thomas <andrew.r.j.thomas@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://andrewrthomas.com"
description = "a simple convolution reverb"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_vizia = {git = "https://github.com/robbert-vdh/nih-plug.git"}
hound = "3.5.1"
realfft = "3.3.0"
num = "0.4.1"
rubato = "0.15.0"
convrs = { path = "../" }

